--- a/plugin/OBSSync.csproj
+++ b/plugin/OBSSync.csproj
@@ -3,9 +3,13 @@
     <!-- BepInEx Properties -->
     <PropertyGroup>
         <AssemblyName>Nicole.OBSSync</AssemblyName>
-        <Product>OBSSync</Product>
-        <!-- Change to whatever version you're currently on. -->
-        <Version>1.0.0</Version>
+        <Version>0.1.0</Version>
+        <Authors>Nicole</Authors>
+        
+        <AssemblyTitle>OBS Sync</AssemblyTitle>
+        <Description>Automatically control your OBS and create timestamp logs of your games for easier video editing.</Description>
+        <PackageProjectUrl>https://git.nortel.cloud/lc-modding/OBSSync</PackageProjectUrl>
+        
     </PropertyGroup>
 
     <!-- Project Properties -->
@@ -14,6 +18,8 @@
         <RootNamespace>OBSSync</RootNamespace>
         <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
         <LangVersion>latest</LangVersion>
+
+        <IncludeSourceRevisionInInformationalVersion>false</IncludeSourceRevisionInInformationalVersion>
     </PropertyGroup>
 
     <!-- Enable Nullable for better IDE null-checking -->
@@ -42,11 +48,14 @@
     
     <!-- Primary Package References -->
     <ItemGroup>
-        <PackageReference Include="BepInEx.Analyzers" Version="1.*" PrivateAssets="all"/>
-        <PackageReference Include="BepInEx.Core" Version="5.*" PrivateAssets="all"/>
-        <PackageReference Include="BepInEx.PluginInfoProps" Version="2.*" PrivateAssets="all"/>
-        <PackageReference Include="LethalCompany.GameLibs.Steam" Version="*-*" PrivateAssets="all"/>
         <PackageReference Include="UnityEngine.Modules" Version="2022.3.9" IncludeAssets="compile" PrivateAssets="all"/>
+        <PackageReference Include="BepInEx.Core" Version="5.4.21" PrivateAssets="all" />
+        <PackageReference Include="BepInEx.Analyzers" Version="1.0.8" PrivateAssets="all" />
+        <PackageReference Include="LethalCompany.GameLibs.Steam" Version="*-*" PrivateAssets="all"/>
+
+        <!-- Automatically generates a BepInEx plugin from the values at the top of this file -->
+        <PackageReference Include="BepInEx.AutoPlugin" Version="1.1.0" PrivateAssets="all"/>
+
     </ItemGroup>
 
     <ItemGroup Condition="'$(TargetFramework.TrimEnd(`0123456789`))' == 'net'">
