--- a/plugin/OBSSync.csproj
+++ b/plugin/OBSSync.csproj
@@ -2,13 +2,13 @@
 
     <!-- BepInEx Properties -->
     <PropertyGroup>
-        <AssemblyName>Nicole.OBSSync</AssemblyName>
-        <Version>1.0.0</Version>
+        <AssemblyName>mja00.OBSSyncReforked</AssemblyName>
+        <Version>1.1.0</Version>
         <Authors>Nicole, mja00</Authors>
         
-        <AssemblyTitle>OBS Sync</AssemblyTitle>
+        <AssemblyTitle>OBS Sync Reforked</AssemblyTitle>
         <Description>Automatically control your OBS and create timestamp logs of your games for easier video editing.</Description>
-        <PackageProjectUrl>https://git.nortel.cloud/lc-modding/OBSSync</PackageProjectUrl>
+        <PackageProjectUrl>https://github.com/mja00/OBSSync</PackageProjectUrl>
         
     </PropertyGroup>
 
